--- a/src/main/res/layout/hello_layout.xml
+++ b/src/main/res/layout/hello_layout.xml
@@ -2,11 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	      android:orientation="vertical"
 	      android:layout_width="fill_parent"
-	      android:layout_height="fill_parent"
-	      >
+	      android:layout_height="fill_parent">
   <TextView
-      android:id="@+id/text_view"
+      android:id="@+id/text_timer"
       android:layout_width="fill_parent"
-      android:layout_height="wrap_content"
-      />
+      android:layout_height="wrap_content" />
+  <Button
+      android:id="@+id/button_start"
+      android:layout_width="fill_parent"
+      android:layout_height="wrap_content" />
 </LinearLayout>
